# BDMI---astroagent

./: .gitignore  README.md  agent_tool_layer_redesign.md  optimization_proposal.md  pyproject.toml
Egent/: .env.example  .gitignore  README.md  config.py  ew_tools.py  llm_client.py  requirements.txt  run_ew.py
Egent/example/: linelist.csv
Egent/tutorial_output/: results_20251201_210421.json
configs/: line_catalog.json
docs/: agent_audit_plan.md  data_sources.md  egent_reference.md  llm_interface.md  minimal_implementation.md  project_plan.md  repo_map.md  srt_code_tools_review.md
scripts/: apply_fit_control_patch.py  make_review_packet.py  make_true_absorber_review_packet.py  run_fit_control_loop.py  run_fit_review.py  run_local_data_batch.py
src/astroagent/: __init__.py  desi_public.py  fit_control_apply.py  fit_control_record.py  line_catalog.py  llm_interface.py  peak_detection.py  review_continuum.py  review_packet.py  review_plot.py  voigt_fit.py  voigt_model.py
src/astroagent/agent/: __init__.py  fit_control.py  llm.py  loop.py  policy.py
src/astroagent/cli/: __init__.py  apply_fit_control_patch.py  main.py  make_review_packet.py  run_fit_control_loop.py  run_fit_review.py
src/astroagent/data/: __init__.py  desi_public.py
src/astroagent/review/: __init__.py  continuum.py  packet.py  plot.py
src/astroagent/spectra/: __init__.py  line_catalog.py  (+3 more)
tests/: test_desi_public.py  test_fit_control_loop.py  test_llm_interface.py  test_review_packet.py
tools/codex/: README.md  codex-provider-switch  codex_provider_profiles.json  codex_provider_switch.mjs  codex_provider_switch.py
(+5 files in other folders)
